chore: cleaning up unused code

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -38,6 +38,9 @@ main {
   &.body-nightsnack {
     background-color: #c6d2cf;
   }
+  &.body-thanks {
+    background-color: #ffe3c9;
+  }
 }
 
 // general background styles
