--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -93,6 +93,7 @@ main {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding-top: 1%;
   }
 }
 
@@ -246,7 +247,7 @@ main {
 
   .nsc-title-medium {
     font-family: $font-serif;
-    font-size: 102px;
+    font-size: 175px;
     font-weight: 200;
     line-height: 1.25;
     vertical-align: middle;
@@ -254,6 +255,10 @@ main {
     color: #5e7017;
     text-align: center;
     margin: 0;
+
+    @include respond-max($bp-lg-desk) {
+      font-size: 102px;
+    }
 
     @include respond-max($bp-lg-lap) {
       font-size: 81px;
@@ -453,9 +458,13 @@ main {
 
     &.thanks-content {
       color: #5e7017;
-      font-size: 170px;
+      font-size: 250px;
       letter-spacing: -0.04em;
       line-height: 90%;
+
+      @include respond-max($bp-lg-desk) {
+        font-size: 170px;
+      }
 
       @include respond-max($bp-lg-lap) {
         font-size: 136px;
