--- a/src/styles/thanks-page.scss
+++ b/src/styles/thanks-page.scss
@@ -29,42 +29,39 @@
 
   .form-subscribe {
     position: relative;
-    width: 350px;
-    height: 32px;
+    width: 550px;
+    padding-bottom: 29px;
 
-    .button__submit,
-    #mce-EMAIL {
-      height: 32px;
-      padding: 0;
+    .email__submit,
+    .button__submit {
+      padding: 15px 12px 15px 20px;
       margin: 0;
       border-radius: 100px;
-      border: 0px solid #000000;
+      border: 0px;
       text-transform: uppercase;
       font-family: "Helvetica Roman";
       font-weight: 700;
-      font-size: 10px;
+      font-size: 14px;
       letter-spacing: 0;
+      width: 90%;
 
-      @include respond-max($bp-desk) {
+      @include respond-max($bp-lg-desk) {
+        padding: 10px 12px 10px 20px;
         font-size: 12px;
+        width: 350px;
       }
     }
+
     .button__submit {
-      position: absolute;
-      right: 0;
-      top: 0;
-      width: 97px;
+      padding: 15px 0 15px 0;
+      width: 110px;
       background-color: #ff4c24;
       color: #ffffff;
-    }
+      margin-left: -16%;
 
-    #mce-EMAIL {
-      height: 32px;
-      width: 90%;
-      border-radius: 100px;
-      font-weight: 200;
-      color: #999999;
-      padding-left: 16px;
+      @include respond-max($bp-lg-desk) {
+        padding: 10px 0 10px 0;
+      }
     }
   }
 }
@@ -85,21 +82,25 @@
   letter-spacing: 0;
   color: #5e7017;
   list-style: none;
-  font-size: 14px;
 
   a,
   a:link {
     color: #5e7017;
     text-decoration: none;
     transition: 0.5s;
+    font-size: 36px;
 
     &:hover {
       color: #ff4c24;
       cursor: pointer;
     }
-  }
 
-  @include respond-max($bp-desk) {
-    font-size: 14px;
+    @include respond-max($bp-lg-desk) {
+      font-size: 18px;
+    }
+
+    @include respond-max($bp-desk) {
+      font-size: 14px;
+    }
   }
 }
